--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,9 @@ dependencies = [
     "celery-batches>=0.10",
     "django-ninja-cursor-pagination>=0.1.0",
     "django-postgres-partition>=0.1.4",
-    "pyyaml>=6.0.2",                      # allauth openapi spec
+    "pyyaml>=6.0.2",                      
+    "anthropic~=0.60.0",
+    "openai~=1.98.0",
 ]
 
 [tool.uv]
